# shynebox

./: .gitignore  AUTHORS  CHANGELOG  COPYING  Makefile.am  README.md  WAYLAND.md  autogen.sh  configure.ac  meson.build  meson_options.txt  version.h.in
data/: Makemodule.am  apps  init  keys  menu  overlay  windowmenu
data/styles/: Operation
data/styles/Emerge/: theme.cfg
data/styles/arch/: theme.cfg
data/styles/bloe/: theme.cfg
data/styles/bora_black/: theme.cfg
data/styles/bora_blue/: theme.cfg
data/styles/bora_green/: theme.cfg
data/styles/carp/: theme.cfg
data/styles/green_tea/: theme.cfg
data/styles/ostrich/: theme.cfg
data/styles/zimek_bisque/: theme.cfg
data/styles/zimek_darkblue/: theme.cfg
doc/: Makemodule.am  sbrun.1.in  sbsetbg.1.in  sbsetroot.1.in  shynebox-apps.5.in  shynebox-keys.5.in  shynebox-menu.5.in  shynebox-style.5.in  shynebox.1.in  startshynebox.1.in
doc/asciidoc/: README.txt  client-patterns.txt  sbrun.txt  sbsetbg.txt  sbsetroot.txt  shynebox-apps.txt  shynebox-keys.txt  shynebox-menu.txt  shynebox-style.txt  shynebox.txt  startshynebox.txt
nls/: Makemodule.am
src/: ButtonTheme.cc  ButtonTheme.hh  ButtonTool.cc  ButtonTool.hh  CascadePlacement.cc  CascadePlacement.hh  CenterPlacement.cc  CenterPlacement.hh  ClientMenu.cc  ClientMenu.hh  ClientPattern.cc  ClientPattern.hh  ClockTool.cc  ClockTool.hh  ConfigMenu.cc  ConfigMenu.hh  CurrentWindowCmd.cc  CurrentWindowCmd.hh  Debug.hh  Ewmh.cc  Ewmh.hh  FocusControl.cc  FocusControl.hh  FocusModelMenuItem.hh  FocusSmartPlacement.cc  FocusSmartPlacement.hh  Focusable.hh  FocusableList.cc  FocusableList.hh  FocusableTheme.hh  HeadArea.cc  HeadArea.hh  IconButton.cc  IconButton.hh  IconbarTheme.cc  IconbarTheme.hh  IconbarTool.cc  IconbarTool.hh  Keys.cc  Keys.hh  (+89 more)
src/tk/: App.cc  App.hh  AutoReloadHelper.cc  AutoReloadHelper.hh  BoolMenuItem.hh  BorderTheme.cc  BorderTheme.hh  Button.cc  Button.hh  ButtonTrain.cc  ButtonTrain.hh  CachedPixmap.cc  CachedPixmap.hh  Color.cc  Color.hh  ColorLUT.cc  ColorLUT.hh  Command.hh  CommandParser.hh  Config.cc  Config.hh  EventHandler.hh  EventManager.cc  EventManager.hh  FileUtil.cc  FileUtil.hh  Font.cc  Font.hh  FontImp.hh  GContext.cc  GContext.hh  I18n.cc  I18n.hh  ITypeAheadable.hh  Image.cc  Image.hh  ImageControl.cc  ImageControl.hh  ImageImlib2.cc  ImageImlib2.hh  (+72 more)
util/: Makemodule.am  sbsetbg  sbsetroot.cc  sbsetroot.hh  startshynebox.in
util/sbrun/: Makemodule.am  SbRun.cc  SbRun.hh  main.cc  sbrun.xpm
